--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,11 @@
+server:
+  ssl:
+    key-store: classpath:keystore.p12
+    key-store-password: 230406
+    keyStoreType: PKCS12
+    keyAlias: myapp
+
+  port: 4245
 
 spring:
   data:
@@ -17,5 +25,3 @@ springdoc:
     operations-sorter: alpha
     disable-swagger-default-url: true
     doc-expansion: none
-server:
-  port: 4245
